// Copyright 2021 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package tast.cros.inputs;

import "google/protobuf/empty.proto";

option go_package = "chromiumos/tast/services/cros/inputs";

// KeyboardService .....
service KeyboardService {
  // Type some stuff
  rpc Type (TypeRequest) returns (google.protobuf.Empty) {}

}

message TypeRequest {
  string key = 1;
}
